= Changelog


== Release 0.2.0

* ADDED: DomainName#valid?

* ADDED: DomainName#parse and DomainName#parse!

* ADDED: DomainName#valid_domain? and DomainName#valid_subdomain?

* CHANGED: Make sure RuleList lookup is only performed once.


== Release 0.1.0

* Initial version